# Logic

./: Logic.cabal  README.md
libs/: arith.l  list.l
src/: Logic.hs  Main.hs  Prover.hs  Substitution.hs
tests/: arith.l  graphq.l  lam.l  list.l  test2.l
